# spline_patch_prototype

./: .gitignore  CLAUDE.md  README.md  Starting.txt  pyproject.toml  requirements-dev.txt
.claude/: settings.json  settings.local.json
docs/: acceptance_tests.md  architecture.md  implementation_plan.md  specification.md
prompts/: build_program.md
src/texture_patch/: __init__.py  app.py  geometry.py  optimizer.py  reference_grid.py  settings.py  spline_patch.py
src/texture_patch/views/: __init__.py  main_window.py  panel1_source_view.py  panel2_texture_view.py  panel3_patch_view.py
tests/: test_geometry_contract.py  test_optimizer_contract.py  test_reference_grid_contract.py  test_spline_contract.py
