[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "texture-patch-prototype"
version = "0.1.0"
description = "Interactive PySide6 prototype for texture extraction and spline-patch residual optimization."
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
    "numpy>=1.26",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []
